// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FiltersForm reacts to apply CTA 1`] = `
.c0 {
  background-color: white;
  box-shadow: 4px 0 #4d5256, 0 -4px #4d5256, -4px 0 #4d5256, 0 4px #4d5256;
  color: #212529;
  cursor: pointer;
  display: block;
  font-family: 'Press Start 2P',monospace;
  font-size: 0.65em;
  font-weight: bold;
  line-height: calc(2 * 1.5em);
  margin: 0.5em;
  padding: 0.5em;
  background-color: #ADACB1;
  box-shadow: none;
}

<div>
  <button
    class="c0"
  >
    Filter
  </button>
  <button
    class="c0"
  >
    Reset
  </button>
</div>
`;

exports[`FiltersForm reacts to query input 1`] = `
.c2 {
  background-color: white;
  box-shadow: 4px 0 #4d5256, 0 -4px #4d5256, -4px 0 #4d5256, 0 4px #4d5256;
  display: block;
  margin: 0.5em;
  max-width: 450px;
  overflow-x: auto;
  padding: 0.5em;
  white-space: pre-wrap;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #212529;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: 'Press Start 2P',monospace;
  font-size: 0.65em;
  font-weight: bold;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  line-height: calc(2 * 1.5em);
}

.c10 {
  background-color: white;
  box-shadow: 4px 0 #4d5256, 0 -4px #4d5256, -4px 0 #4d5256, 0 4px #4d5256;
  color: #212529;
  cursor: pointer;
  display: block;
  font-family: 'Press Start 2P',monospace;
  font-size: 0.65em;
  font-weight: bold;
  line-height: calc(2 * 1.5em);
  margin: 0.5em;
  padding: 0.5em;
}

.c8 {
  background-color: white;
  border: none;
  box-shadow: 0 4px #4d5256, 0 -4px #4d5256, 4px 0 #4d5256, -4px 0 #4d5256;
  font-family: 'Press Start 2P',monospace;
  line-height: calc(2 * 1.5em);
  margin: 4px;
  outline-color: #212529;
  padding: 0.5rem 1rem;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #4d525666;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  left: 0;
  overflow: auto;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 1;
}

.c7 {
  margin: 1em 0 0 0;
}

.c0 {
  background-color: white;
  box-shadow: 4px 0 #4d5256, 0 -4px #4d5256, -4px 0 #4d5256, 0 4px #4d5256;
  color: #212529;
  cursor: pointer;
  display: block;
  font-family: 'Press Start 2P',monospace;
  font-size: 0.65em;
  font-weight: bold;
  line-height: calc(2 * 1.5em);
  margin: 0.5em;
  padding: 0.5em;
  background-color: #ADACB1;
  box-shadow: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c5 {
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  height: 20em;
  overflow: auto;
}

.c6 {
  background-color: white;
  box-shadow: 4px 0 #4d5256,0 -4px #4d5256,-4px 0 #4d5256,0 4px #4d5256;
  cursor: pointer;
  margin: 5px;
  padding: 0 1px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
}

<div>
  <button
    class="c0"
  >
    Filter
  </button>
  <button
    class="c0"
  >
    Reset
  </button>
  <div
    class="c1"
  >
    <pre
      class="c2"
      type="black"
    >
      <code
        class="c3"
        type="black"
      >
        <form
          class="c4"
        >
          <pre
            class="c2"
            type="black"
          >
            <code
              class="c3"
              type="black"
            >
              <div
                class="c5"
              >
                <div
                  class="c6"
                >
                  General
                </div>
              </div>
            </code>
          </pre>
          <div
            class="c7"
          />
          <input
            aria-label="query"
            class="c8"
            name="query"
            placeholder="find theme..."
            type="text"
            value="gene"
          />
          <div
            class="c7"
          />
          <div
            class="c9"
          >
            <button
              class="c10"
              type="submit"
            >
              Apply
            </button>
            <button
              class="c10"
              type="button"
            >
              Reset
            </button>
          </div>
        </form>
      </code>
    </pre>
  </div>
</div>
`;

exports[`FiltersForm reacts to reset CTA 1`] = `
.c2 {
  background-color: white;
  box-shadow: 4px 0 #4d5256, 0 -4px #4d5256, -4px 0 #4d5256, 0 4px #4d5256;
  display: block;
  margin: 0.5em;
  max-width: 450px;
  overflow-x: auto;
  padding: 0.5em;
  white-space: pre-wrap;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #212529;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: 'Press Start 2P',monospace;
  font-size: 0.65em;
  font-weight: bold;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  line-height: calc(2 * 1.5em);
}

.c10 {
  background-color: white;
  box-shadow: 4px 0 #4d5256, 0 -4px #4d5256, -4px 0 #4d5256, 0 4px #4d5256;
  color: #212529;
  cursor: pointer;
  display: block;
  font-family: 'Press Start 2P',monospace;
  font-size: 0.65em;
  font-weight: bold;
  line-height: calc(2 * 1.5em);
  margin: 0.5em;
  padding: 0.5em;
}

.c8 {
  background-color: white;
  border: none;
  box-shadow: 0 4px #4d5256, 0 -4px #4d5256, 4px 0 #4d5256, -4px 0 #4d5256;
  font-family: 'Press Start 2P',monospace;
  line-height: calc(2 * 1.5em);
  margin: 4px;
  outline-color: #212529;
  padding: 0.5rem 1rem;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #4d525666;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  left: 0;
  overflow: auto;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 1;
}

.c7 {
  margin: 1em 0 0 0;
}

.c0 {
  background-color: white;
  box-shadow: 4px 0 #4d5256, 0 -4px #4d5256, -4px 0 #4d5256, 0 4px #4d5256;
  color: #212529;
  cursor: pointer;
  display: block;
  font-family: 'Press Start 2P',monospace;
  font-size: 0.65em;
  font-weight: bold;
  line-height: calc(2 * 1.5em);
  margin: 0.5em;
  padding: 0.5em;
  background-color: #ADACB1;
  box-shadow: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c5 {
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  height: 20em;
  overflow: auto;
}

.c6 {
  background-color: white;
  box-shadow: 4px 0 #4d5256,0 -4px #4d5256,-4px 0 #4d5256,0 4px #4d5256;
  cursor: pointer;
  margin: 5px;
  padding: 0 1px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
}

<div>
  <button
    class="c0"
  >
    Filter
  </button>
  <button
    class="c0"
  >
    Reset
  </button>
  <div
    class="c1"
  >
    <pre
      class="c2"
      type="black"
    >
      <code
        class="c3"
        type="black"
      >
        <form
          class="c4"
        >
          <pre
            class="c2"
            type="black"
          >
            <code
              class="c3"
              type="black"
            >
              <div
                class="c5"
              >
                <div
                  class="c6"
                >
                  General
                </div>
                <div
                  class="c6"
                >
                  Other
                </div>
                <div
                  class="c6"
                >
                  Unspecific
                </div>
              </div>
            </code>
          </pre>
          <div
            class="c7"
          />
          <input
            aria-label="query"
            class="c8"
            name="query"
            placeholder="find theme..."
            type="text"
            value=""
          />
          <div
            class="c7"
          />
          <div
            class="c9"
          >
            <button
              class="c10"
              type="submit"
            >
              Apply
            </button>
            <button
              class="c10"
              type="button"
            >
              Reset
            </button>
          </div>
        </form>
      </code>
    </pre>
  </div>
</div>
`;

exports[`FiltersForm renders a list of filters when opened 1`] = `
.c2 {
  background-color: white;
  box-shadow: 4px 0 #4d5256, 0 -4px #4d5256, -4px 0 #4d5256, 0 4px #4d5256;
  display: block;
  margin: 0.5em;
  max-width: 450px;
  overflow-x: auto;
  padding: 0.5em;
  white-space: pre-wrap;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #212529;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: 'Press Start 2P',monospace;
  font-size: 0.65em;
  font-weight: bold;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  line-height: calc(2 * 1.5em);
}

.c10 {
  background-color: white;
  box-shadow: 4px 0 #4d5256, 0 -4px #4d5256, -4px 0 #4d5256, 0 4px #4d5256;
  color: #212529;
  cursor: pointer;
  display: block;
  font-family: 'Press Start 2P',monospace;
  font-size: 0.65em;
  font-weight: bold;
  line-height: calc(2 * 1.5em);
  margin: 0.5em;
  padding: 0.5em;
}

.c8 {
  background-color: white;
  border: none;
  box-shadow: 0 4px #4d5256, 0 -4px #4d5256, 4px 0 #4d5256, -4px 0 #4d5256;
  font-family: 'Press Start 2P',monospace;
  line-height: calc(2 * 1.5em);
  margin: 4px;
  outline-color: #212529;
  padding: 0.5rem 1rem;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #4d525666;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  left: 0;
  overflow: auto;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 1;
}

.c7 {
  margin: 1em 0 0 0;
}

.c0 {
  background-color: white;
  box-shadow: 4px 0 #4d5256, 0 -4px #4d5256, -4px 0 #4d5256, 0 4px #4d5256;
  color: #212529;
  cursor: pointer;
  display: block;
  font-family: 'Press Start 2P',monospace;
  font-size: 0.65em;
  font-weight: bold;
  line-height: calc(2 * 1.5em);
  margin: 0.5em;
  padding: 0.5em;
  background-color: #ADACB1;
  box-shadow: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c5 {
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  height: 20em;
  overflow: auto;
}

.c6 {
  background-color: white;
  box-shadow: 4px 0 #4d5256,0 -4px #4d5256,-4px 0 #4d5256,0 4px #4d5256;
  cursor: pointer;
  margin: 5px;
  padding: 0 1px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
}

<div>
  <button
    class="c0"
  >
    Filter
  </button>
  <button
    class="c0"
  >
    Reset
  </button>
  <div
    class="c1"
  >
    <pre
      class="c2"
      type="black"
    >
      <code
        class="c3"
        type="black"
      >
        <form
          class="c4"
        >
          <pre
            class="c2"
            type="black"
          >
            <code
              class="c3"
              type="black"
            >
              <div
                class="c5"
              >
                <div
                  class="c6"
                >
                  General
                </div>
                <div
                  class="c6"
                >
                  Other
                </div>
                <div
                  class="c6"
                >
                  Unspecific
                </div>
              </div>
            </code>
          </pre>
          <div
            class="c7"
          />
          <input
            aria-label="query"
            class="c8"
            name="query"
            placeholder="find theme..."
            type="text"
            value=""
          />
          <div
            class="c7"
          />
          <div
            class="c9"
          >
            <button
              class="c10"
              type="submit"
            >
              Apply
            </button>
            <button
              class="c10"
              type="button"
            >
              Reset
            </button>
          </div>
        </form>
      </code>
    </pre>
  </div>
</div>
`;

exports[`FiltersForm renders main CTAs when not opened 1`] = `
.c0 {
  background-color: white;
  box-shadow: 4px 0 #4d5256, 0 -4px #4d5256, -4px 0 #4d5256, 0 4px #4d5256;
  color: #212529;
  cursor: pointer;
  display: block;
  font-family: 'Press Start 2P',monospace;
  font-size: 0.65em;
  font-weight: bold;
  line-height: calc(2 * 1.5em);
  margin: 0.5em;
  padding: 0.5em;
  background-color: #ADACB1;
  box-shadow: none;
}

<div>
  <button
    class="sc-AxiKw c0"
  >
    Filter
  </button>
  <button
    class="sc-AxiKw c0"
  >
    Reset
  </button>
</div>
`;
